--- a/index.qmd
+++ b/index.qmd
@@ -63,13 +63,539 @@ format:
 ::: {.incremental style="line-height: 3"}
 -   **1** - Introduction
 
--   **2** - Hyperspectral to multispectral remote sensing to identify intertidal macrophytes
+-   **2** - Summary of the first 2 years
 
--   **3** - Drone mapping of intertidal soft bottom habitats across 3 sites along the European Atlantic coast
+-   **3** - Work of the year 
 
--   **4** - Spatio-temporal variability of intertidal seagrass meadow across a 23° latitudinal gradient: a study of 12 sites
+    - BiCOME Drone paper - Finalization and Publication
 
--   **5** - Additional work parallel to the thesis
+    - DISCOV model - Application and Update for *Gracilaria vermiculophylla* prediction
+    
+    - Heatwave on Seagrass experiment
 
--   **6** - Conclusion
+-   **4** - Additional work parallel to the thesis
+
+-   **5** - Conclusion
+:::
+
+## Coastal zone : areas under anthropogenic pressure {style="font-size: 60px;"}
+
+::: {.absolute top="0" left="95%"}
+::: sectionhead
+1 [2 3 4 5 6]{style="opacity:0.25"}
+:::
+:::
+
+::: {.absolute bottom="0%" right="-2%"}
+[1]{style="color: black;"}
+:::
+
+::: {.absolute .fragment .fade-in-then-out bottom="3%" right="-8%" fragment-index="2"}
+![](Images/map_buffer_slide21.png){height="1000"}
+:::
+
+::: {.absolute .fragment .fade-in-then-out bottom="3%" right="-8%" fragment-index="3"}
+![](Images/map_density_slide21.png){height="1000"}
+:::
+
+::: {.fragment .fade-out fragment-index="10"}
+::: {.fragment .fade-in .absolute fragment-index="6" top="10%" left="40%"}
+![](Images/ships_slide2.jpg){height="300"}
+:::
+
+::: {.fragment .fade-in .absolute fragment-index="7" top="10%" left="60%"}
+![](Images/oyster_slide2.jpg){height="300"}
+:::
+
+::: {.fragment .fade-in .absolute fragment-index="8" top="34%" left="40%"}
+![](Images/fishing_slide2.jpg){height="300"}
+:::
+
+::: {.fragment .fade-in .absolute fragment-index="9" top="34%" left="63.5%"}
+![](Images/tourism_slide2.jpg){height="300"}
+:::
+:::
+
+::: {.fragment .fade-in-then-out .absolute fragment-index="11" top="25%" left="40%"}
+![](Images/CoastalErosion.gif){height="750"}
+:::
+
+::: {.fragment .fade-in-then-out .absolute fragment-index="12" top="25%" left="40%"}
+![](Images/CoastalArtificialisation.png){height="650"}
+:::
+
+::: {.fragment .fade-in-then-out .absolute fragment-index="13" top="25%" left="40%"}
+![](Images/GreenTides_Slide1.png){height="500"}
+:::
+
+::: {.fragment .fade-in .absolute fragment-index="14" top="15%" left="50%"}
+![](Images/EolienneOffshore.jpg){height="400"}
+:::
+
+::: {.fragment .fade-in .absolute fragment-index="14" top="15%" left="76%"}
+![](Images/Agarophyton.jpg){height="400"}
+:::
+
+::: {.fragment .fade-in .absolute fragment-index="14" top="45%" left="53%"}
+![](Images/Dredging.jpg){height="600"}
+:::
+
+::: {.fragment .fade-in fragment-index="1" style="font-size: 50px;"}
+-   Densely populated areas:
+:::
+
+::: {.absolute .fragment .fade-in fragment-index="2" left="150px" top="200px" style="font-size: 40px;"}
+-   4% of the french territory
+:::
+
+::: {.absolute .fragment .fade-in fragment-index="3" left="150px" top="300px" style="font-size: 40px;"}
+-   10% of the french population
+:::
+
+::: {.absolute .fragment .fade-in fragment-index="4" top="400px" style="font-size: 50px;"}
+::: {.fragment .fade-out fragment-index="10"}
+-   Many economic activities:
+:::
+:::
+
+::: {.absolute .fragment .fade-in fragment-index="10" top="400px" style="font-size: 50px;"}
+-   Many anthropogenic pressures:
+:::
+
+::: {.absolute .fragment .fade-in fragment-index="11" left="150px" top="500px" style="font-size: 40px;"}
+-   Shoreline changes and Coastal Erosion
+:::
+
+::: {.absolute .fragment .fade-in fragment-index="12" left="150px" top="600px" style="font-size: 40px;"}
+-   Modification of hydrological properties
+:::
+
+::: {.absolute .fragment .fade-in fragment-index="13" left="150px" top="700px" style="font-size: 40px;"}
+-   Input of nutrients or hazardous substances
+:::
+
+::: {.absolute .fragment .fade-in-then-out fragment-index="13" left="1000px" top="850px" style="font-size: 40px;"}
+[Quillien et al. (2015)]{style="color: black;"}
+:::
+
+::: {.absolute .fragment .fade-in fragment-index="14" left="150px" top="800px" style="font-size: 40px;"}
+-   Introduction of energy (Noises, Temperature, vibration...)
+:::
+
+::: {.absolute .fragment .fade-in fragment-index="14" left="150px" top="900px" style="font-size: 40px;"}
+-   Non-indigenous species introduction
+:::
+
+::: {.absolute .fragment .fade-in fragment-index="14" left="150px" top="1000px" style="font-size: 40px;"}
+-   Extraction of species by commercial fishing
+:::
+
+::: {.absolute .fragment .fade-in fragment-index="14" left="150px" top="1100px" style="font-size: 40px;"}
+-   ...
+:::
+
+## Intertidal habitats {auto-animate="true" style="font-size: 60px;"}
+
+::: {.absolute top="0" left="95%"}
+::: sectionhead
+1 [2 3 4 5 6]{style="opacity:0.25"}
+:::
+:::
+
+::: {.absolute bottom="0%" right="-2%"}
+[2]{style="color: black;"}
+:::
+
+::: {.fragment .fade-in .absolute data-id="VideoSoft" fragment-index="1" top="30%" left="0%"}
+![](Videos/P4810662.MP4){height="600"}
+:::
+
+::: {.fragment .fade-in .absolute data-id="VideoHard" fragment-index="1" top="30%" left="50%"}
+![](Videos/DJI_0076_1.mp4){height="600"}
+:::
+
+::: {.fragment .fade-in fragment-index="1"}
+-   Soft Bottom and Hard Bottom
+:::
+
+::: {.fragment .absolute .fade-in bottom="20%" left="2%" data-id="TextSoft" fragment-index="1"}
+[Aveiro Lagoon, Portugal]{style="color: black; font-size: 40px"}
+:::
+
+::: {.fragment .absolute .fade-in bottom="20%" left="52%" fragment-index="1"}
+[Mesquer, France]{style="color: black; font-size: 40px"}
+:::
+
+## Intertidal habitats {auto-animate="true" style="font-size: 60px;"}
+
+::: {.absolute top="0" left="95%"}
+::: sectionhead
+1 [2 3 4 5 6]{style="opacity:0.25"}
+:::
+:::
+
+::: {.absolute bottom="0%" right="-2%"}
+[2]{style="color: black;"}
+:::
+
+::: {.absolute .fragment .fade-in-then-out fragment-index="1" top="25%" left="0%"}
+![](Images/habitat_slides3_all.png){height="900"}
+:::
+
+::: {.absolute .fragment .fade-in fragment-index="2" top="25%" left="0%"}
+![](Images/Pheophyceae_cropped.png){height="350"}
+:::
+
+::: {.absolute .fragment .fade-in fragment-index="3" top="25%" left="15%"}
+![](Images/Chlorophyceae_cropped.png){height="350"}
+:::
+
+::: {.absolute .fragment .fade-in fragment-index="4" top="25%" left="30%"}
+![](Images/Magnoliopsida_cropped.png){height="350"}
+:::
+
+::: {.absolute .fragment .fade-in fragment-index="5" top="52%" left="7.5%"}
+![](Images/Bacillariophyceae_cropped.png){height="350"}
+:::
+
+::: {.absolute .fragment .fade-in fragment-index="6" top="52%" left="22.5%"}
+![](Images/Rodophyceae_cropped.png){height="350"}
+:::
+
+::: {.absolute .fragment .fade-in-then-out fragment-index="7" top="43%" left="50%"}
+![](Images/MPB_slide3.jpg){height="700"}
+:::
+
+::: {.absolute .fragment .fade-in-then-out fragment-index="8" top="43%" left="50%"}
+![](Images/eelgrass_slide3.jpg){height="700"}
+:::
+
+::: {.fragment .fade-out fragment-index="12"}
+::: {.absolute data-id="VideoSoft" top="0%" left="50%"}
+![](Videos/P4810662.MP4){height="400"}
+:::
+
+::: {.absolute top="27%" left="52%" data-id="TextSoft"}
+[Aveiro Lagoon, Portugal]{style="color: black; font-size: 30px"}
+:::
+
+::: {.absolute .fragment .fade-in fragment-index="9" top="70%" left="48%"}
+![](Images/FishSeagrass.jpg){height="350"}
+:::
+
+::: {.absolute .fragment .fade-in fragment-index="10" top="43%" left="48%"}
+![](Images/birds2_slide3.jpg){height="350"}
+:::
+
+::: {.absolute .fragment .fade-in fragment-index="11" top="70%" left="70%"}
+![](Images/paper_slide3.png){height="350"}
+:::
+
+::: {.fragment .fade-in .absolute top="37%" left="48%" fragment-index="9"}
+-   Nurserey and habitat of many species
+:::
+:::
+
+::: {.absolute .fragment .fade-in fragment-index="13" top="50%" left="60%"}
+![](Images/European_Commission.svg.png){height="444"}
+:::
+
+::: {.absolute .fragment .fade-in fragment-index="14" top="33%" left="50%"}
+![](Images/Arrow.png){height="100"}
+:::
+
+<div>
+
+-   Soft Bottom [and Hard Bottom]{style="opacity:0.25"}
+
+</div>
+
+::: {.fragment .fade-in .absolute top="16%" fragment-index="1"}
+-   Multiple classes of vegetation
+:::
+
+::: {.fragment .fade-in-then-out .absolute top="35%" left="45%" fragment-index="2"}
+-   Pheophyceae, Brown algae
+:::
+
+::: {.fragment .fade-in-then-out .absolute top="35%" left="45%" fragment-index="3"}
+-   Pheophyceae, Brown algae
+-   Chloropyceae, Green algae
+:::
+
+::: {.fragment .fade-in-then-out .absolute top="35%" left="45%" fragment-index="4"}
+-   Pheophyceae, Brown algae
+-   Chloropyceae, Green algae
+-   Magnoliopsida, Seagrasses
+:::
+
+::: {.fragment .fade-in-then-out .absolute top="35%" left="45%" fragment-index="5"}
+-   Pheophyceae, Brown algae
+-   Chloropyceae, Green algae
+-   Magnoliopsida, Seagrasses
+-   Bracilariophyceae, Microphytobenthos
+:::
+
+::: {.fragment .fade-in-then-out .absolute top="35%" left="45%" fragment-index="6"}
+-   Pheophyceae, Brown algae
+-   Chloropyceae, Green algae
+-   Magnoliopsida, Seagrasses
+-   Bracilariophyceae, Microphytobenthos
+-   Rhodophyceae, Red algae
+:::
+
+::: {.fragment .fade-in-then-out .absolute top="37%" left="48%" fragment-index="7"}
+-   Protection against erosion
+:::
+
+::: {.fragment .fade-in-then-out .absolute top="37%" left="48%" fragment-index="8"}
+-   Carbon fixation
+:::
+
+::: {.fragment .fade-in .absolute top="10%" left="52%" fragment-index="12"}
+[Improve the protection]{style="font-size: 70px"}
+:::
+
+::: {.fragment .fade-in .absolute top="20%" left="45%" fragment-index="13"}
+-   Water Framework Directive (2001)
+-   Marine Strategy Framework Directive (2008)
+:::
+
+::: {.fragment .fade-in .absolute top="36%" left="55%" fragment-index="14"}
+Good Knowledge of soft bottom intertidal habitats
+:::
+
+## How to monitor this ecosystem ? {auto-animate="true" style="font-size: 60px;"}
+
+::: {.absolute top="0" left="95%"}
+::: sectionhead
+1 [2 3 4 5 6]{style="opacity:0.25"}
+:::
+:::
+
+::: {.absolute bottom="0%" right="-2%"}
+[3]{style="color: black;"}
+:::
+
+::: {.fragment .fade-in fragment-index="1"}
+-   *in situ* Survey
+:::
+
+::: {.absolute .fragment .fade-in-then-out fragment-index="1" data-id="LaurentLisboa" top="20%" left="20%"}
+![](Images/LaurentLisboa.jpg){height="1000"}
+:::
+
+## How to monitor this ecosystem ? {auto-animate="true" style="font-size: 60px;"}
+
+::: {.absolute top="0" left="95%"}
+::: sectionhead
+1 [2 3 4 5 6]{style="opacity:0.25"}
+:::
+:::
+
+::: {.absolute bottom="0%" right="-2%"}
+[3]{style="color: black;"}
+:::
+
+::: {.fragment .fade-out fragment-index="7"}
+::: {.absolute data-id="LaurentLisboa" top="7%" left="45%"}
+![](Images/LaurentLisboa.jpg){height="350"}
+:::
+
+::: {.absolute .fragment .fade-in fragment-index="1" top="7%" left="71%"}
+![](Images/StudentOntheField.jpg){height="350"}
+:::
+
+::: {.absolute .fragment .fade-in fragment-index="4" top="50%" left="45%"}
+![](Images/Sentinel2.png){height="400"}
+:::
+
+::: {.absolute .fragment .fade-in fragment-index="4" top="53%" left="52%"}
+![](Images/Matrice200.png){height="400"}
+:::
+:::
+
+::: {.absolute .fragment .fade-in-then-out fragment-index="7" top="20%" left="45%"}
+![](Images/bandsvstime.png){width="1000"}
+:::
+
+::: {.absolute .fragment .fade-in-then-out fragment-index="8" top="5%" left="50%"}
+![](Images/EOimplemtation.png){width="900"}
+:::
+
+::: {.absolute .fragment .fade-in data-ID="MullerTable" fragment-index="11" top="20%" right="0%"}
+![](Images/muller_karger_table.png){height="700"}
+:::
+
+::: {.fragment .fade-out fragment-index="9"}
+<div>
+
+-   *in situ* Survey
+
+</div>
+
+::: {.absolute top="17%" left="8%"}
+-- [Time-consuming]{style="font-size: 50px"}
+:::
+
+::: {.absolute .fragment .fade-in fragment-index="1" top="22%" left="8%"}
+-- [Hard to access]{style="font-size: 50px"}
+:::
+
+::: {.absolute .fragment .fade-in fragment-index="2" top="27%" left="8%"}
+-- [Expensive]{style="font-size: 50px"}
+:::
+
+::: {.absolute .fragment .fade-in fragment-index="3" top="32%" left="8%"}
+-- [Low extent and temporal resolution]{style="font-size: 50px"}
+:::
+
+::: {.absolute .fragment .fade-in fragment-index="4" top="50%"}
+-   Remote Sensing Survey
+:::
+
+::: {.absolute .fragment .fade-in fragment-index="5" top="57%" left="8%"}
+-- [Cost effective]{style="font-size: 50px"}
+:::
+
+::: {.absolute .fragment .fade-in fragment-index="6" top="62%" left="8%"}
+-- [Good coverage/Time ratio]{style="font-size: 50px"}
+:::
+:::
+
+::: {.fragment .fade-in-then-out fragment-index="8"}
+[Papathanasopoulou, E., Simis, S., Alikas, K., Ansper, A., Anttila, S., Jenni, A., Barillé, A.-L., Barillé, L., Brando, V., Bresciani, M., Bučas, M., Gernez, P., Giardino, C., Harin, N., Hommersom, A., Kangro, K., Kauppila, P., Koponen, S., Laanen, M., ... Zoffoli, M. L. (2019). Satellite-assisted monitoring of water quality to support the implementation of the Water Framework Directive. In EOMORES white paper. https://doi.org/10.5281/zenodo.3463051]{style="position: absolute; left: 1200px; top: 1150px; height: 110px; width: 785px; background-color: #FFFFFF; padding: 20px; padding-left: 50px; font-size: 20px; text-align: center; color:#292626 "}
+:::
+
+::: {.absolute .fragment .fade-in data-ID="Mullerlegend" fragment-index="12" top="15%" right="15%"}
+[Muller-Karger et al. (2018)]{style="font-size: 40px"}
+:::
+
+::: {.absolute .fragment .fade-in fragment-index="9" top="10%" left="0%"}
+![](Images/Pereira2013.png){height="300"}
+:::
+
+::: {.absolute .fragment .fade-in width="40%" fragment-index="10" top="40%" left="0%"}
+-   Standardized measurements or indicators to monitor biodiversity
+:::
+
+::: {.absolute .fragment .fade-in width="40%" fragment-index="11" top="40%" left="0%"}
+-   Standardized measurements or indicators to monitor biodiversity
+-   Key metrics to monitor and assess biodiversity changes
+:::
+
+## How to monitor this ecosystem ? {auto-animate="true" style="font-size: 60px;"}
+
+::: {.absolute top="0" left="95%"}
+::: sectionhead
+1 [2 3 4 5 6]{style="opacity:0.25"}
+:::
+:::
+
+::: {.absolute bottom="0%" right="-2%"}
+[3]{style="color: black;"}
+:::
+
+::: {.absolute data-ID="MullerTable" top="13%" left="15%"}
+![](Images/muller_slide4.png){height="1000"}
+:::
+
+::: {.absolute bottom="3%" left="35%"}
+![](Images/scale_muller_slide4.png){height="40"}
+:::
+
+::: {.absolute data-ID="Mullerlegend" top="8%" right="15%"}
+[Table adapted from Muller-Karger et al. (2018)]{style="font-size: 40px"}
+:::
+
+## Objectives of the thesis {auto-animate="true" style="font-size: 60px;"}
+
+::: {.absolute top="0" left="95%"}
+::: sectionhead
+1 [2 3 4 5 6]{style="opacity:0.25"}
+:::
+:::
+
+::: {.absolute bottom="0%" right="-2%"}
+[4]{style="color: black;"}
+:::
+
+::: {.fragment .fade-out fragment-index="5"}
+::: {.absolute .fragment .fade-in-then-out width="2200" fragment-index="1"}
+-   [Map spatial and temporal variations in plant biodiversity of intertidal zones with a focus on green macrophytes]{style="font-size: 60px"}
+:::
+
+::: {.absolute .fragment .fade-in-then-out width="2200" fragment-index="2"}
+-   [Map]{style="font-size: 60px"} [spatial]{style="font-size: 60px; color: red"} [and temporal variations in plant biodiversity of intertidal zones with a focus on green macrophytes]{style="font-size: 60px"}
+:::
+
+::: {.absolute .fragment .fade-in width="2200" fragment-index="3"}
+-   [Map]{style="font-size: 60px"} [spatial]{style="font-size: 60px; color: red"} [and]{style="font-size: 60px"} [temporal]{style="font-size: 60px; color: red"} [variations in plant biodiversity of intertidal zones with a focus on green macrophytes]{style="font-size: 60px"}
+:::
+
+::: {.absolute .fragment .fade-in fragment-index="2" top="20%" left="20%"}
+![](Images/matrice200.png){height="300"}
+:::
+
+::: {.absolute .fragment .fade-in fragment-index="3" top="20%" right="35%"}
+![](Images/Sentinel2.png){height="300"}
+:::
+
+::: {.absolute .fragment .fade-in top="25%" right="10%" fragment-index="3"}
+-   [Revisit time: 3 to 5 days]{style="font-size: 40px"}
+-   [Archive since 2016]{style="font-size: 40px"}
+:::
+
+::: {.absolute .fragment .fade-in bottom="40%" fragment-index="4"}
+-   [Analyze natural and human factors responsible for changes.]{style="font-size: 60px"}
+:::
+
+::: {.absolute .fragment .fade-in fragment-index="4" top="60%" left="0%"}
+![](Images/SST.png){height="400"}
+:::
+
+::: {.absolute .fragment .fade-in fragment-index="4" top="60%" left="30%"}
+![](Images/MHW.png){height="400"}
+:::
+
+::: {.absolute .fragment .fade-in fragment-index="4" top="60%" left="65%"}
+![](Images/riverdischarge.png){height="500"}
+:::
+
+::: {.absolute .fragment .fade-in fragment-index="4" top="55%" left="8%"}
+[Sea Surface Temperature]{style="font-size: 40px"}
+:::
+
+::: {.absolute .fragment .fade-in fragment-index="4" top="55%" left="42%"}
+[Marine Heat Wave]{style="font-size: 40px"}
+:::
+
+::: {.absolute .fragment .fade-in fragment-index="4" top="55%" left="76%"}
+[River Discharge]{style="font-size: 40px"}
+:::
+:::
+
+::: {.absolute .fragment .fade-in-then-out fragment-index="5" top="37%" left="0%"}
+![](Images/workflowthesis_0.png){width="2400"}
+:::
+
+::: {.absolute .fragment .fade-in-then-out fragment-index="6" top="37%" left="0%"}
+![](Images/workflowthesis_1.png){width="2400"}
+:::
+
+::: {.absolute .fragment .fade-in-then-out fragment-index="7" top="11%" left="0%"}
+![](Images/workflowthesis_2.png){width="2400"}
+:::
+
+::: {.absolute .fragment .fade-in-then-out fragment-index="8" top="11%" left="0%"}
+![](Images/workflowthesis_3.png){width="2400"}
+:::
+
+::: {.absolute .fragment .fade-in- fragment-index="9" top="37%" left="0%"}
+![](Images/workflowthesis_0.png){width="2400"}
+:::
+
+::: {.fragment .fade-in .absolute fragment-index="9" top="35%" left="-1%"}
+::: {.redbox .absolute height="300px" width="1700px"}
+:::
 :::
