--- a/index.qmd
+++ b/index.qmd
@@ -632,8 +632,12 @@ Good Knowledge of soft bottom intertidal habitats
 :::
 
 ::: {.fragment .fade-in-then-out .absolute fragment-index="9" top="35%" left="-1%"}
-::: {.redbox .absolute height="300px" width="1700px"}
+::: {.greenbox .absolute height="300px" width="1700px"}
 :::
+:::
+
+::: {.absolute .fragment .fade-in-then-out fragment-index="9" top="25%" left="27%"}
+[Done !]{style="font-size: 80px; color: green"}
 :::
 
 ::: {.absolute .fragment .fade-in fragment-index="10" top="14%" left="0%"}
@@ -645,12 +649,21 @@ Good Knowledge of soft bottom intertidal habitats
 :::
 :::
 
+::: {.fragment .fade-in .absolute fragment-index="10" top="36%" left="18%"}
+::: {.redbox .absolute height="600px" width="680px"}
+:::
+:::
+
+::: {.absolute .fragment .fade-in fragment-index="10" top="25%" left="45%"}
+[Upcoming !]{style="font-size: 80px; color: red"}
+:::
+
 ## 
 ::: {.gradient_box style="text-align: center; position: absolute; left: 50%; top: 40%; width: 2500px; transform: translate(-50%, -50%)"}
 [Summary of the first 2 years]{style="color: black; font-size: 150px; font-weight: bold;"}
 :::
 
-## Hyperspectral {auto-animate="true" style="font-size: 60px;"}
+## Challenges to map intertidal vegetations {auto-animate="true" style="font-size: 60px;"}
 
 ::: {.absolute top="0" left="95%"}
 ::: sectionhead
@@ -730,3 +743,171 @@ ggsave("Images/Figure_Hyperspectral.png", last_plot(), width = 948*2, height = 4
 ::: {.absolute bottom="28%" left="2%"}
 [Phaeophyceae]{style="font-size: 40px"}
 :::
+
+::: {.absolute bottom="28%" left="22%"}
+[Chlorophyceae]{style="font-size: 40px"}
+:::
+
+::: {.absolute bottom="28%" left="42%"}
+[Magnoliopsida]{style="font-size: 40px"}
+:::
+
+::: {.absolute bottom="28%" left="61%"}
+[Bacillariophyceae]{style="font-size: 40px"}
+:::
+
+::: {.absolute bottom="28%" left="82%"}
+[Rhodophyceae]{style="font-size: 40px"}
+:::
+
+```{r Hyperspectral resampling}
+#| cache: true
+#| echo: false
+#| eval: false
+#| warning: false
+
+
+rhodo <- "Data/Fig_Hyperspectral/BEL_STD.csv" %>%
+    read.csv() %>% 
+    group_by(Wavelength) %>% 
+    reframe(Rhodophyceae = median(mean_STD))
+
+
+
+speclib <- "Data/Fig_Hyperspectral/spec_lib.csv" %>% 
+    read.csv() %>% 
+    select(-c(X,OSM,Bare.Sediment,Xanthophyceae)) %>% 
+    left_join(rhodo, by = "Wavelength") %>%
+    pivot_longer(-Wavelength, names_to = "Class",values_to = "Ref")  %>% 
+    mutate(Class = case_when(Class == "Magnoliosida" ~ "Magnoliopsida",
+                             Class == "Ulvophyceae" ~ "Chlorophyceae",
+                             TRUE ~ Class)) %>% 
+    pivot_wider(names_from = Class,values_from = Ref)
+
+
+speclib_filled <- speclib[0,]
+for (i in 400:900) {
+
+    a <- speclib %>% 
+        filter(Wavelength == i)
+    
+    if (!nrow(a) == 1) {
+        
+        b1 <-  speclib %>% 
+        filter(Wavelength == i-1)
+        
+        b2 <- speclib %>% 
+        filter(Wavelength == i+1)
+        
+        for (ii in 1:ncol(b1)) {
+            if(ii == 1){
+                speclib_filled[nrow(speclib_filled)+1,ii]<-mean(c(as.numeric(b1[1,ii]),as.numeric(b2[1,ii])))
+            }else{
+                speclib_filled[nrow(speclib_filled),ii]<-mean(c(as.numeric(b1[1,ii]),as.numeric(b2[1,ii])))
+            }
+        }
+    }else{
+        speclib_filled[nrow(speclib_filled)+1,]<-a
+    }
+    
+}
+
+SRF_Drone <- "Data/SRF/SRF_Drone.txt" %>% 
+    read.delim() %>% 
+    purrr::set_names(c("Wavelength","B1_444","B2_475","B3_531","B4_560","650","B6_668","B7_705","B8_717","B9_740","B10_840")) %>% 
+    dplyr::filter(Wavelength >= min(speclib$Wavelength),
+                  Wavelength <= max(speclib$Wavelength))
+
+SRF_S2 <- "Data/SRF/SRF_S2.txt" %>% 
+    read.delim() %>% 
+    select(1:14) %>% 
+    purrr::set_names(c("Wavelength","B1_443","B2_490","B3_560","B4_665","B5_705","B6_740","B7_783","B8_842","B8a_865","B9_945","B10_1375","B11_1610","B12_2190"))%>% 
+    dplyr::filter(Wavelength >= min(speclib$Wavelength),
+                  Wavelength <= max(speclib$Wavelength)) %>% 
+    dplyr::select(Wavelength,B2_490,B3_560, B4_665, B5_705, B6_740, B7_783, B8_842, B8a_865)
+
+Speclib_S2 <- tibble()    
+for (i in 2:ncol(speclib_filled)) {
+    
+    for (ii in 2:ncol(SRF_S2)) {
+        
+        S2_res <- speclib_filled[,i] %>% 
+            set_names("Class") %>% 
+            mutate(SRF = SRF_S2[,ii]) %>% 
+            reframe(test = weighted.mean(Class,SRF))
+        
+        Speclib_S2[ii-1,i-1] <- as.numeric(S2_res)
+    }
+    
+}
+
+Speclib_S2 <- Speclib_S2 %>% 
+    set_names(names(speclib_filled)[-1]) %>% 
+    mutate(Wavelength = as.numeric(gsub(".*_","",names(SRF_S2)[-1]))) %>% 
+    pivot_longer(-Wavelength, names_to = "Class",values_to = "Ref") %>% 
+    mutate(Sensor = "S2")
+
+Speclib_Drone <- tibble()    
+for (i in 2:ncol(speclib_filled)) {
+    
+    for (ii in 2:ncol(SRF_Drone)) {
+        
+        Drone_res <- speclib_filled[,i] %>% 
+            set_names("Class") %>% 
+            mutate(SRF = SRF_Drone[,ii]) %>% 
+            reframe(test = weighted.mean(Class,SRF))
+        
+        Speclib_Drone[ii-1,i-1] <- as.numeric(Drone_res)
+    }
+    
+}
+Speclib_Drone <- Speclib_Drone %>% 
+    set_names(names(speclib_filled)[-1]) %>% 
+    mutate(Wavelength = as.numeric(gsub(".*_","",names(SRF_Drone)[-1])))%>% 
+    pivot_longer(-Wavelength, names_to = "Class",values_to = "Ref") %>% 
+    mutate(Sensor = "Drone")
+
+
+speclib_resampled <- Speclib_Drone %>% 
+    rbind(Speclib_S2)
+
+
+speclib_resampled %>% 
+    filter(Sensor == "Drone") %>% 
+    group_by(Class) %>% 
+    reframe(Wavelength = Wavelength,
+            Ref = (Ref-min(Ref))/(max(Ref)-min(Ref))) %>% 
+    ggplot()+
+    geom_line(aes(Wavelength,y = Ref, color = Class), linewidth = 1.5)+
+    scale_color_manual(values=c( "#DAA520", "#b3ff1a", "#389318", "#873e23", "#b3002d"))+
+    theme_Bede()+
+    ylab("Standardised Reflectance")+
+    xlab("Wavelength (nm)")+
+    theme(legend.position = c(0.15, 0.8),
+          legend.text = element_text(size = 12),
+          axis.text.x = element_text(size = 12),
+          axis.text.y = element_text(size = 12))
+
+ggsave("Images/Speclib_Drone.png", last_plot(), width = 948*2, height = 450*2, units = "px")
+
+speclib_resampled %>% 
+    filter(Sensor == "S2",
+           Wavelength %in% c(490, 560, 665, 842)) %>% 
+    group_by(Class) %>% 
+    reframe(Wavelength = Wavelength,
+            Ref = (Ref-min(Ref))/(max(Ref)-min(Ref))) %>% 
+    ggplot()+
+    geom_line(aes(Wavelength,y = Ref, color = Class), linewidth = 1.5)+
+    scale_color_manual(values=c( "#DAA520", "#b3ff1a", "#389318", "#873e23", "#b3002d"))+
+    theme_Bede()+
+    ylab("Standardised Reflectance")+
+    xlab("Wavelength (nm)")+
+    theme(legend.position = c(0.15, 0.8),
+          legend.text = element_text(size = 12),
+          axis.text.x = element_text(size = 12),
+          axis.text.y = element_text(size = 12))
+
+ggsave("Images/Speclib_S2.png", last_plot(), width = 948*2, height = 450*2, units = "px")
+
+
+```
