--- a/index.qmd
+++ b/index.qmd
@@ -24,7 +24,6 @@ library(tidyverse)
 library(Utilities.Package)
 ```
 
-
 ##  {background-image="Images/Slide1_Background.png"}
 
 ::: {.gradient_box style="text-align: center; position: absolute; left: 50%; top: 15%; width: 1800px; transform: translate(-50%, -50%)"}
@@ -78,13 +77,13 @@ library(Utilities.Package)
 
 -   **2** - Summary of the first 2 years
 
--   **3** - Work of the year 
+-   **3** - Work of the year
 
-    - BiCOME Drone paper - Finalization and Publication
+    -   BiCOME Drone paper - Finalization and Publication
 
-    - DISCOV model - Application and Update for *Gracilaria vermiculophylla* prediction
-    
-    - Heatwave on Seagrass experiment
+    -   DISCOV model - Application and Update for *Gracilaria vermiculophylla* prediction
+
+    -   Heatwave on Seagrass experiment
 
 -   **4** - Additional work parallel to the thesis
 
@@ -92,6 +91,7 @@ library(Utilities.Package)
 :::
 
 ## 
+
 ::: {.gradient_box style="text-align: center; position: absolute; left: 50%; top: 40%; width: 1200px; transform: translate(-50%, -50%)"}
 [Introduction]{style="color: black; font-size: 150px; font-weight: bold;"}
 :::
@@ -232,9 +232,11 @@ library(Utilities.Package)
 ![](Videos/DJI_0076_1.mp4){height="650"}
 :::
 
-::: {}
+<div>
+
 -   Soft Bottom and Hard Bottom
-:::
+
+</div>
 
 ::: {.absolute bottom="15%" left="0%" data-id="TextSoft"}
 [Aveiro Lagoon, Portugal]{style="color: black; font-size: 40px"}
@@ -326,11 +328,7 @@ library(Utilities.Package)
 ::: {.absolute .fragment .fade-in fragment-index="12" top="45%" left="75%"}
 ![](Images/Red_Algae_bloom_cropped.jpg){height="600"}
 :::
-
 :::
-
-
-
 
 ::: {.absolute .fragment .fade-in fragment-index="15" top="50%" left="60%"}
 ![](Images/European_Commission.svg.png){height="444"}
@@ -659,6 +657,7 @@ Good Knowledge of soft bottom intertidal habitats
 :::
 
 ## 
+
 ::: {.gradient_box style="text-align: center; position: absolute; left: 50%; top: 40%; width: 2500px; transform: translate(-50%, -50%)"}
 [Summary of the first 2 years]{style="color: black; font-size: 150px; font-weight: bold;"}
 :::
@@ -729,19 +728,19 @@ ggsave("Images/Figure_Hyperspectral_faded.png", last_plot(), width = 948*2, heig
 
 ```
 
-::: {.absolute data-id="SpectralSignature" .fragment .fade-out fragment-index="1" top="14%" left="-2%"}
+::: {.absolute .fragment .fade-out data-id="SpectralSignature" fragment-index="1" top="14%" left="-2%"}
 ![](Images/Figure_Hyperspectral.png){height="630"}
 :::
 
-::: {.absolute data-id="SpectralSignature" .fragment .fade-in fragment-index="1" top="14%" left="-2%"}
+::: {.absolute .fragment .fade-in data-id="SpectralSignature" fragment-index="1" top="14%" left="-2%"}
 ![](Images/Figure_Hyperspectral_faded.png){height="630"}
 :::
 
-::: {.absolute data-id="SpectralSignature" .fragment .fade-out fragment-index="1" top="12%" right="-2%"}
+::: {.absolute .fragment .fade-out data-id="SpectralSignature" fragment-index="1" top="12%" right="-2%"}
 ![](Images/Disc_Pigment_Table.png){height="630"}
 :::
 
-::: {.absolute data-id="SpectralSignature" .fragment .fade-in fragment-index="1" top="12%" right="-2%"}
+::: {.absolute .fragment .fade-in data-id="SpectralSignature" fragment-index="1" top="12%" right="-2%"}
 ![](Images/Disc_Pigment_Table_faded.png){height="630"}
 :::
 
@@ -776,7 +775,6 @@ ggsave("Images/Figure_Hyperspectral_faded.png", last_plot(), width = 948*2, heig
 ::: {.absolute .fragment .fade-in fragment-index="1" bottom="0%" left="80%"}
 ![](Images/Rodophyceae_cropped_faded.png){height="350"}
 :::
-
 
 ::: {.absolute bottom="28%" left="2%"}
 [Phaeophyceae]{style="font-size: 40px"}
@@ -1030,7 +1028,6 @@ ggsave("Images/Speclib_PRISMA.png", last_plot(), width = 948*2, height = 450*2, 
 ![](Images/Figure_Hyperspectral_Instru.png){height="600"}
 :::
 
-
 ```{r make a gif1}
 #| cache: true
 #| echo: false
@@ -1057,7 +1054,6 @@ image_write(image = img_animated,
             path = "Images/Spectra_resampled_gif.gif")
 ```
 
-
 ::: {.absolute top="45%" data-id="SpectralSignatureGIF" right="-2%"}
 ![](Images/Spectra_resampled_gif.gif){height="600"}
 :::
@@ -1066,7 +1062,7 @@ image_write(image = img_animated,
 ![](Images/BedePaperCover.png){height="450"}
 :::
 
-##  Discriminate green macrophytes using remote sensing {auto-animate="true" style="font-size: 60px;"}
+## Discriminate green macrophytes using remote sensing {auto-animate="true" style="font-size: 60px;"}
 
 ::: {.absolute top="0" left="95%"}
 ::: sectionhead
@@ -1079,11 +1075,9 @@ image_write(image = img_animated,
 :::
 
 ::: {.fragment .fade-out fragment-index="3"}
-::: {.absolute data-id="SpectralSignatureGIF" top="50%"  left="-2%"}
+::: {.absolute data-id="SpectralSignatureGIF" top="50%" left="-2%"}
 ![](Images/Spectra_resampled_gif.gif){height="600"}
 :::
-
-
 
 ::: {.absolute .fragment .fade-in fragment-index="2" top="30%" right="-5%"}
 ![](Images/spectro.jpg){height="620"}
@@ -1098,21 +1092,19 @@ image_write(image = img_animated,
 :::
 :::
 
-
 ::: {.fragment .fade-in fragment-index="3"}
-::: {.absolute top="50%"  left="-2%"}
+::: {.absolute top="50%" left="-2%"}
 ![](Images/Spectra_resampled_gif.gif){height="600"}
 :::
 
-::: {.absolute top="20%" .fragment .fade-out fragment-index="4" right="-2%"}
+::: {.absolute .fragment .fade-out top="20%" fragment-index="4" right="-2%"}
 ![](Images/Spectra_distance_gif.gif){height="700"}
 :::
 :::
 
-::: {.absolute top="8%" .fragment .fade-in fragment-index="4" right="-2%"}
+::: {.absolute .fragment .fade-in top="8%" fragment-index="4" right="-2%"}
 ![](Images/Figure6_Bede.png){height="1150"}
 :::
-
 
 ```{r make a gif2}
 #| cache: true
@@ -1166,3 +1158,122 @@ image_write(image = img_animated,
 ![](Images/micasense_SRF.png){height="650"}
 :::
 
+## Detailed Study Sites {auto-animate="true" style="font-size: 60px;"}
+
+::: {.absolute top="0" left="95%"}
+::: sectionhead
+[1]{style="opacity:0.25"} 2 [3 4 5 6]{style="opacity:0.25"}
+:::
+:::
+
+::: {.absolute top="10%" right="0%"}
+![](Images/Fig1_Map_Drone_Sites.png){height="1200"}
+:::
+
+::: {.absolute top="20%"}
+```{=html}
+<style>
+.container {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+.table-container {
+    width: 60%;
+    font-size: 40px;
+}
+th {
+    background-color: #d3d3d3; /* Darker gray background for headers */
+    border: 1px solid black;
+    padding: 15px;
+    text-align: center;
+    vertical-align: middle;
+}
+td {
+    border: 1px solid black;
+    padding: 15px;
+    text-align: center;
+    vertical-align: middle;
+}
+tr:nth-child(2) {
+    background-color: #f9f9f9; /* Light gray background for the first data row */
+}
+tr:nth-child(3) {
+    background-color: #e9e9e9; /* Slightly darker gray for the second data row */
+}
+tr:nth-child(4) {
+    background-color: #d9d9d9; /* Darker gray for the third data row */
+}
+</style>
+
+<div class="container">
+    <div class="table-container">
+        <table>
+            <th>
+                <th>Country</th>
+                <th>Site</th>
+                <th>Name</th>
+                <th>Altitude</th>
+            </th>
+            <tr>
+                <td>A</td>
+                <td>France</td>
+                <td>Morbihan Gulf</td>
+                <td>Arz Island<br>Duer<br>Duer</td>
+                <td>- 12 m<br>- 12 m<br>- 120 m</td>
+            </tr>
+            <tr class="fragment fade-in" data-fragment-index="1">
+                <td>B</td>
+                <td>France</td>
+                <td>Noirmoutier Island</td>
+                <td>Barbâtre<br>L'Epine</td>
+                <td>- 120 m<br>- 120 m</td>
+            </tr>
+            <tr class="fragment fade-in" data-fragment-index="2">
+                <td>C</td>
+                <td>Portugal</td>
+                <td>Aveiro Lagoon</td>
+                <td>Inner<br>Mataducos<br>Gafanha<br>Gafanha</td>
+                <td>- 120 m<br>- 120 m<br>- 120 m<br>- 12 m</td>
+            </tr>
+        </table>
+    </div>
+</div>
+```
+:::
+
+::: {.absolute .fragment .fade-in fragment-index="3" data-id="2alt" bottom="15%" left="0%"}
+[2 altitudes = 2 purposes]{style="font-size: 80px"}
+:::
+
+## 2 altitudes = 2 purposes {auto-animate="true" style="font-size: 60px;"}
+
+::: {.absolute top="0" left="95%"}
+::: sectionhead
+[1]{style="opacity:0.25"} 2 [3 4 5 6]{style="opacity:0.25"}
+:::
+:::
+
+::: {.absolute data-id="2alt" top="-0%" left="0%" style="font-size: 80px; color: rgba(0,0,0,0);"}
+2 altitudes = 2 purposes
+:::
+
+::: {.absolute top="10%" left="-2%"}
+![](Images/Graphical_Abstract.png){height="1150"}
+:::
+
+::: {.absolute .fragment .fade-in fragment-index="1" top="8%" left="26%"}
+![](Images/Gaf_Low_RGB.png){height="1200"}
+:::
+
+::: {.absolute top="34%" .fragment .fade-in fragment-index="1" left="63%" style="font-size: 30px;"}
+~ 1.5 millions pixels
+:::
+
+::: {.absolute .fragment .fade-in fragment-index="2" top="25%" right="-2%"}
+![](Images/table_training_px.png){height="350"}
+:::
+
+::: {.absolute top="65%" .fragment .fade-in fragment-index="2 " right="0%" style="font-size: 50px;"}
+~ 500 000 training pixels
+:::
