--- a/index.qmd
+++ b/index.qmd
@@ -1274,6 +1274,36 @@ tr:nth-child(4) {
 ![](Images/table_training_px.png){height="350"}
 :::
 
-::: {.absolute top="65%" .fragment .fade-in fragment-index="2 " right="0%" style="font-size: 50px;"}
+::: {.absolute top="65%" .fragment .fade-in fragment-index="2 " right="2%" data-id="training_px" style="font-size: 50px;"}
 ~ 500 000 training pixels
+:::
+
+## Model Building {auto-animate="true" style="font-size: 60px;"}
+
+::: {.absolute top="0" left="95%"}
+::: sectionhead
+[1]{style="opacity:0.25"} 2 [3 4 5 6]{style="opacity:0.25"}
+:::
+:::
+
+::: {.absolute data-id="training_px" top="45%" left="-3%" style="font-size: 50px;"}
+~ 500 000 training pixels
+:::
+
+
+
+::: {.absolute .fragment .fade-in fragment-index="1" top="43%" left="22%"}
+![](Images/Arrow_right_short.png){width="300"}
+:::
+
+::: {.absolute .fragment .fade-in fragment-index="1" top="30%" left="45%"}
+![](Images/fastai.png){width="300"}
+:::
+
+::: {.absolute .fragment .fade-in fragment-index="2" top="43%" right="22%"}
+![](Images/Arrow_right_short.png){width="300"}
+:::
+
+::: {.absolute .fragment .fade-in fragment-index="2" top="25%" right="-2%"}
+![](Images/DISCOV_logo.png){height="550"}
 :::
