--- a/index.qmd
+++ b/index.qmd
@@ -1318,5 +1318,5 @@ tr:nth-child(4) {
 
 
 ```{=html}
-<iframe width="780" height="500" src="https://github.com/SigOiry/DISCOV-MicaSense" title="Webpage example"></iframe>
+<iframe width="1500" height="800" src="Data/git_repo_DISCOV/DISCOV-MicaSense.htm" title="Webpage example"></iframe>
 ```
