--- a/index.qmd
+++ b/index.qmd
@@ -1382,6 +1382,37 @@ Neurtal Network
 :::
 :::
 
+::: {.absolute top="30%" left="5%"}
+![](Images/table_validation_.png){height="450"}
+:::
+
+::: {.absolute .fragment .fade-in fragment-index="1" top="10%" right="-2%"}
+![](Images/ConfusionMatrixGlobal.png){height="950"}
+:::
+
+
+## Results {auto-animate="true" style="font-size: 60px;"}
+::: {.absolute top="0" left="95%"}
+::: sectionhead
+[1]{style="opacity:0.25"} 2 [3 4 5 6]{style="opacity:0.25"}
+:::
+:::
+
+::: {.absolute .fragment .fade-out fragment-index="1" top="20%" left="-2%"}
+![](Images/FigX-Boat_Pred2.png){height="850"}
+:::
+
+::: {.absolute .fragment .fade-in-then-out fragment-index="1" top="28%" left="-2%"}
+![](Images/FigX-Dike_Pred2.png){height="550"}
+:::
+
+::: {.absolute .fragment .fade-in-then-out fragment-index="2" top="10%" left="25%"}
+![](Images/FigX-Gaf_High_Pred.png){height="1100"}
+:::
+
+
+
+
 ## The Model {auto-animate="true" style="font-size: 60px;"}
 ::: {.absolute top="0" left="95%"}
 ::: sectionhead
